# SFML-Time-utilities-without-SFML

./: CMakeLists.txt  Clock.cpp  README.md  Time.cpp  Time.hpp  Timer.cpp  Timer.hpp
include/: Clock.hpp  FPSCounter.hpp
src/: FPSCounter.cpp
test/: main.cpp
